520 - Fix workflows not properly set when creating instance configurations